crates/azalea-core/src/typeck/snapshots/azalea_core__typeck__tests__primitive_types_are_not_infinite.snap
---
source: crates/azalea-core/src/typeck/tests.rs
expression: output
---
VAR: a

TYPE:
Int

RESULT:
false
