crates/azalea-core/src/typeck/snapshots/azalea_core__typeck__tests__typecheck_fn_type.snap
---
source: crates/azalea-core/src/typeck/tests.rs
expression: output
---
RESULT:
Ok(
    (),
)

ENV:
{
    "f": Fn(
        Function {
            name: "f",
            args: [
                (
                    "y",
                    Int,
                ),
            ],
            return_ty: Int,
            body: Some(
                [
                    Span {
                        target: Expr(
                            Span {
                                target: Literal(
                                    Int(
                                        50,
                                    ),
                                ),
                                loc: SourceLoc {
                                    line: 1,
                                    start: 0,
                                    end: 0,
                                },
                            },
                        ),
                        loc: SourceLoc {
                            line: 1,
                            start: 0,
                            end: 0,
                        },
                    },
                    Span {
                        target: Expr(
                            Span {
                                target: Literal(
                                    Int(
                                        100,
                                    ),
                                ),
                                loc: SourceLoc {
                                    line: 1,
                                    start: 0,
                                    end: 0,
                                },
                            },
                        ),
                        loc: SourceLoc {
                            line: 1,
                            start: 0,
                            end: 0,
                        },
                    },
                ],
            ),
            body_expr: None,
        },
    ),
}
