crates/azalea-core/src/typeck/snapshots/azalea_core__typeck__tests__typecheck_for.snap
---
source: crates/azalea-core/src/typeck/tests.rs
expression: output
---
SOURCE:
for x in [1, 2, 3] do let x = 5 end

RESULT:
Err(
    UnificationError(
        "Cannot unify Unresolved with Int",
    ),
)

ENV:
{
    "x": Int,
}
