crates/azalea-core/src/typeck/snapshots/azalea_core__typeck__tests__typecheck_lambda.snap
---
source: crates/azalea-core/src/typeck/tests.rs
expression: output
---
EXPR:
fn(a) -> ᵗa = a

RESULT:
Ok(
    Fn(
        Function {
            name: "lambda",
            args: [
                (
                    "a",
                    Var(
                        "a",
                    ),
                ),
            ],
            type_params: [],
            return_ty: Var(
                "a",
            ),
            body: None,
            body_expr: Some(
                Span {
                    target: Ident(
                        "a",
                    ),
                    loc: SourceLoc {
                        line: 1,
                        start: 0,
                        end: 0,
                    },
                },
            ),
            is_extern: false,
            extern_name: None,
        },
    ),
)

ENV:
"{ a := ᵗa }"
