crates/azalea-core/src/typeck/snapshots/azalea_core__typeck__tests__typecheck_while.snap
---
source: crates/azalea-core/src/typeck/tests.rs
expression: output
---
SOURCE:
while 1==1 do let x = 5 end

RESULT:
Ok(
    (),
)

ENV:
{ x := Int }
